[package]
name = "async_quotation_simulation"
version = "0.0.1"                                                    
edition = "2024"
description = "client and server app"
authors = ["slendersold@mail.ru"]
license = "MIT OR Apache-2.0"
homepage = "https://practicum.yandex.ru/learn/middle-rust-blockchain"
repository = "https://github.com/slendersold/async_quotation_simulation"
keywords = ["async", "client", "server"]
categories = ["command-line-utilities"]
default-run = "client"

[dependencies]
clap = { version = "4.5", features = ["derive"], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
crossbeam-channel = { version = "0.5", optional = true }

# [dev-dependencies]                      # <- секция зависимостей тестов/бенчмарков
# tempdir = "3.0" 

# [build-dependencies]                    # <- секция зависимостей скриптов сборки
# cc = "1.0"                              

# [profile.release]                       # <- секция профиля сборки
# opt-level = 'z' 

[features]
# CLI is enabled by default; it pulls in clap.
default = ["cli"]
cli = ["dep:clap"]
serde = ["dep:serde"]
crossbeam = ["dep:crossbeam-channel"]

[[bin]]
name = "client"
path = "src/bin/client.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[lib]
name = "utils"
path = "src/lib.rs"