[package]
name = "async_quotation_simulation"
version = "0.0.1"                                                    
edition = "2024"
description = "client and server app"
authors = ["slendersold@mail.ru"]
license = "MIT OR Apache-2.0"
homepage = "https://practicum.yandex.ru/learn/middle-rust-blockchain"
repository = "https://github.com/slendersold/async_quotation_simulation"
keywords = ["async", "client", "server"]
categories = ["command-line-utilities"]
default-run = "client"

[dependencies]
clap = { version = "4.5", features = ["derive"], optional = true }
ctrlc = { version = "3.4", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
crossbeam-channel = { version = "0.5", optional = true }

[dev-dependencies]
rand = "0.8"

[features]
default = ["cli"]
cli = ["dep:clap", "dep:ctrlc"]
crossbeam = ["dep:crossbeam-channel"]

[[bin]]
name = "client"
path = "src/bin/client.rs"
required-features = ["cli"]

[[bin]]
name = "server"
path = "src/bin/server.rs"
required-features = ["cli"]

[lib]
name = "utils"
path = "src/lib.rs"